# Bangumi-MCP

./: .gitignore  README.md  README_zh.md  main.py  pyproject.toml  requirements.txt
bangumi_mcp/: __init__.py  __main__.py  bangumi_client.py  dist.json  mcp_server.py  tool_list.py  tools.py  utils.py
